# discovery

./: .gitignore  AGENTS.md  ANALYSIS.md  COHESION.md  ECOSYSTEM.md  MATURITY-ROLLUP.md  NAMING.md  PLAYBOOK.md  README.md  ROADMAP.md  ROADMAP_TODO.md  ROUND-2026-06-17-media-meer-conformance.md  RUN-SUMMARY-adjudication-language.md  RUN-SUMMARY-map-relocation.md  SOVEREIGN-COMMONS-DOSSIER.md  TEST-PLAN.md
alpha/Proofs/encrypted-local-first-atproto/encrypted-sync-slice/: Cargo.toml  README.md  build.rs
alpha/Proofs/encrypted-local-first-atproto/end-to-end-slice/: Cargo.toml  README.md  build.rs
alpha/Proofs/encrypted-local-first-atproto/identity-binding/: Cargo.toml  README.md
alpha/Proofs/encrypted-local-first-atproto/jetstream-appview/: Cargo.toml  README.md  build.rs
alpha/Proofs/encrypted-local-first-atproto/live-bsky-validate/: Cargo.toml  README.md  RESUME.md  build.rs
alpha/Proofs/encrypted-local-first-atproto/local-appview/: Cargo.toml  README.md  build.rs
alpha/Proofs/encrypted-local-first-atproto/local-first-lexicon-app/: Cargo.toml  README.md  build.rs
alpha/Proofs/lineage-groups/: CODING-TRANSCRIPT.md  Cargo.toml  LOCAL_FIRST_HISTORY_FINDINGS.md  PART_A_RECONCILE_FINDINGS.md  PHASE_1_FINDINGS.md  PHASE_2_5_FINDINGS.md  PHASE_2_6_FINDINGS.md  PHASE_2_FINDINGS.md  PHASE_3_FINDINGS.md  PR-CONVERSATION.md  README.md  T1_LINEAGE_CREDENTIAL_FINDINGS.md
alpha/Proofs/lineage-groups/local-first-history-evidence/: dev1.json  dev2-forged.json  dev2.json  dev3.json  mallory.json
alpha/Proofs/lineage-groups/part-a-evidence/: a3-broker-contradiction-verdict.json  a3-durablequeue-add-frank.json  a3-keep-erin-add-grace.json  a3-results-summary.txt  node2-remove-erin.json  verdict-canonical.json  verdict-sha-per-box.txt
alpha/experiments/ap-ambassador/: AP-AMBASSADOR.md  Cargo.toml  FINDINGS-AP.md  README.md
alpha/experiments/ap-ambassador/src/: binding.rs  boundary.rs  canonical.rs  fixtures.rs  fold.rs  lib.rs  records.rs  redact.rs  store.rs  types.rs  verify.rs
alpha/experiments/ap-ambassador/tests/: p1_verify.rs  p2_record.rs  p3_fold.rs  p4_redact.rs  p5_boundary.rs  p6_binding.rs  p7_non_touch.rs  shim_leg.rs
alpha/experiments/appview-validation/: .gitignore  CODING-TRANSCRIPT.md  Cargo.toml  PR-CONVERSATION.md  README.md
alpha/experiments/appview-validation/src/: atproto.rs  index.rs  jetstream.rs  lexicon.rs  lib.rs  main.rs  record_source.rs  report.rs  sealed.rs  server.rs  serviceauth.rs  viewserve.rs
alpha/experiments/attest-family/: Cargo.toml  ENGAGE-LEX.md  FINDINGS-ANONYMITY-SETS.md  FINDINGS.md  PRIMITIVES-ATTEST.md
alpha/experiments/attest-family/lexicons/: README.md  ing.croft.attest.commitmentEpoch.json  ing.croft.attest.credential.json  ing.croft.attest.edgeHalf.json  ing.croft.attest.review.json  ing.croft.attest.reviewReply.json  ing.croft.attest.treeHead.json  ing.croft.attest.vouch.json
alpha/experiments/attest-family/src/: anonymity.rs  atproto_map.rs  canonical.rs  fixtures.rs  fold.rs  issuer.rs  lib.rs  query.rs  types.rs
alpha/experiments/attest-family/tests/: t_a3_map.rs  t_a3_register.rs  t_a3_riders.rs  t_a4_issuer_tree.rs  t_a4_resolvability.rs  t_at0_floor.rs  t_at1_edge.rs  t_at2_vouch.rs  t_at3_corroboration.rs  t_at4_resolvability.rs  t_at5_review.rs  t_at6_covenant.rs  t_at6_predicate.rs  t_pa1_no_default.rs  t_pa2_unlinkability.rs  t_pa3_friction.rs  t_pa4_anonymity.rs  t_pa5_dual.rs  t_pa6_issuer.rs  t_pa_substrate.rs
alpha/experiments/bip39-recovery-roundtrip/: Cargo.toml  README.md
alpha/experiments/bip39-recovery-roundtrip/src/: lib.rs
alpha/experiments/bip39-recovery-roundtrip/tests/: recovery_roundtrip.rs
alpha/experiments/card-ingest/: CAPABILITIES.md  Cargo.toml  README.md
alpha/experiments/card-ingest/card-seal/: Cargo.toml
alpha/experiments/croft-app-phase0/: .gitignore  BUILD-SPEC.md  Cargo.toml  PR-CONVERSATION.md  README.md  design-philosophy.md
alpha/experiments/croft-chat/: Cargo.toml  FANOUT-M1.md  README.md  RUN.md  stone-alpha.toml
alpha/experiments/croft-group/: CLAUDE.md  Cargo.toml
alpha/experiments/encrypted-blob-share/: CODING-TRANSCRIPT.md  Cargo.toml  PR-CONVERSATION.md  README.md
alpha/experiments/fed-shim/: Cargo.toml  FED-SHIM.md  FINDINGS-FED-SHIM.md  README.md
alpha/experiments/group-principal-seam/: Cargo.toml
alpha/experiments/helper-seam/: Cargo.toml
alpha/experiments/hist-atproto-spike/: Cargo.toml  FINDINGS.md  README.md
alpha/experiments/iroh/: .gitignore  CAPABILITIES.md  CLAUDE.md  Cargo.toml  DESIGN.md  KICKOFF-PROMPT.md  META-TRANSCRIPT-next-session.md  NEXT-SESSION-2026-06-16.md  README.md  RELAY-LAB-CONCLUSIONS.md  RELAY-PLACEMENT-LAB-SPEC.md  RESUME-NEXT-SESSION.md  TEST-LOG.md  TESTING-DESIGN.md  VALIDATION.md
alpha/experiments/lexicon-community/: .gitignore  AMBIGUITIES.md  BENCH-STAPLE.md  Cargo.toml  LENS-SEAM-WORKED-EXAMPLE.md  README.md  RUN-LEX-01-SUMMARY.md  SPEC-BADGE-BLUE.md
alpha/experiments/local_storage_projection/: CONVERGENCE_FINDING.md  Cargo.toml  EDGE_TABLE_DECISION.md  FROZEN_FLUID.md  KEY_LAYOUTS.md  MUTATION_TESTING.md  TRAIT_CONTRACTS.md  X3-AUTOMATED-SWEEP.md  X3-CROSS-PACKAGE-SWEEP.md  x3_cross_package_harness.py  x3_vouch_harness.py
alpha/experiments/mls-replant/: Cargo.toml  README.md
alpha/experiments/public-roundtrip/: .env.example  .gitignore  CODING-TRANSCRIPT.md  Cargo.toml  MODERATION.md  PR-CONVERSATION.md  README.md
alpha/experiments/replant-continuity/: Cargo.toml  README.md
alpha/experiments/tier-proof/: Cargo.toml  MEASUREMENTS.md  Makefile  README.md
alpha/experiments/wasm-seal/: .gitignore  Cargo.toml  Makefile  README.md
spike/hist_live/: Cargo.toml  HIST-LIVE-RESULTS.md
spike/hist_live/evidence/: green-adversarial.txt  green-props-final.txt  red-adversarial-strict-neutered.txt  red-props-canonical-broken.txt  red-props-fold-broken.txt
spike/hist_live/src/: budget.rs  canonical.rs  car.rs  did.rs  firehose.rs  fold.rs  leg.rs  lib.rs  live.rs  mst.rs  record.rs  stub.rs
spike/hist_live/tests/: e_adversarial.rs  live_run.rs  live_run_v2.rs  live_run_v3_ranges.rs  properties.rs
(+1387 files in other folders)
