[package]
name = "appview-validation"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
ciborium = "0.2.2"
futures-util = "0.3.32"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "json"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
rustls = { version = "0.23.40", default-features = false, features = ["ring"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "time", "net", "signal", "sync"] }
tokio-tungstenite = { version = "0.29.0", default-features = false, features = ["connect", "handshake", "rustls-tls-native-roots"] }
