[workspace]
members = [
    "crates/altdrive-core",
    "crates/altdrive-spike-iroh",
    "crates/altdrive-spike-irohdocs",
    "crates/altdrive-spike-gossip",
    "crates/altdrive-spike-lineage-sync",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
authors = ["Chase Pettet <chase@owasp.org>"]
repository = "https://github.com/chasemp/alt-drive"

[workspace.dependencies]
# Only deps that are actually driven by a passing test belong here.
# Add to this list when a test forces it; do not add speculatively.

# Secure memory: zeroize secret material in place and on drop.
# Used by SymKey (the 32-byte newtype underlying every key in the
# Alt.Drive key hierarchy).
zeroize = { version = "1", features = ["zeroize_derive"] }

# Pure-Rust libsodium-compatible crypto primitives.
# Used by secretbox::{seal, open} (XSalsa20-Poly1305 AEAD on small
# fields — wraps the key hierarchy and manifest entries) and the OS
# CSPRNG wrapper for nonce generation. Algorithm names map 1:1 to
# DESIGN.md §3.
dryoc = "0.8"

[profile.release]
# Crypto code is sensitive to compiler optimizations that could
# introduce side channels. Standard release profile for now; revisit
# during Phase 1 audit-prep.
lto = "thin"
codegen-units = 1
