[package]
name = "local_storage_projection"
version = "0.1.0"
edition = "2021"

[dependencies]
redb = "2.4"
blake3 = "1"
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
thiserror = "1"
tracing = "0.1"
tokio = { version = "1.18", features = ["sync", "rt", "macros", "rt-multi-thread"] }
proptest = "1"
proptest-derive = "0.4"

[dev-dependencies]
tempfile = "3"

[features]
default = []
