[package]
name = "public-roundtrip"
version = "0.1.0"
edition = "2021"
description = "Standalone experiment: publish a custom-lexicon record to a real AT Protocol PDS and index it back via Jetstream."
publish = false

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "signal"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "form", "rustls", "rustls-native-certs"] }
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect", "rustls-tls-native-roots"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
axum = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
url = "2"
dotenvy = "0.15"
p256 = { version = "0.13", features = ["ecdsa"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
serde_ipld_dagcbor = "0.6"
ipld-core = "0.4"
cid = "0.11"
multibase = "0.9"
k256 = { version = "0.13", features = ["ecdsa"] }
