# E12.7 — Rung-B governance continuity: the bridge that proves the member set the
# governance fold DERIVES is exactly the member set the MLS re-plant STAMPS, across changes.
# Standalone crate (own lockfile). Depends on BOTH the mutation-vetted fold and the standalone
# re-plant crate by path — deliberately the ONLY place openmls and the substrate meet, so the
# substrate stays openmls-free.
[package]
name = "replant-continuity"
version = "0.1.0"
edition = "2021"

[dependencies]
local_storage_projection = { path = "../local_storage_projection" }
mls-replant = { path = "../mls-replant" }
redb = "2.4"
tempfile = "3"
# BLAKE3 — the committed hash suite (Part 2 §10.4). Used for the B1 dataplane
# record content-address and history digest (experiment-grade, test-only serialization).
blake3 = "1"

[dev-dependencies]
