[package]
name = "end-to-end-slice"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

[dependencies]
# private encrypted stack
automerge = "0.7"
openmls = "0.8"
openmls_rust_crypto = "0.5"
openmls_traits = "0.5"
openmls_basic_credential = "0.5"
chacha20poly1305 = "0.10"
rand = "0.8"

# records, lexicons, JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"

# PDS + AppView + firehose
rusqlite = { version = "0.32", features = ["bundled"] }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
reqwest = { version = "0.13", default-features = false, features = ["json"] }
tokio-tungstenite = "0.29"
futures-util = "0.3"

# real atproto CIDs
cid = "0.11"
serde_ipld_dagcbor = "0.6"
multihash-codetable = { version = "0.2", features = ["sha2"] }
