[package]
name = "live-bsky-validate"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
rand = "0.8"

# real HTTPS to the PDS + real WSS to Jetstream (rustls; bundled roots)
reqwest = { version = "0.13", default-features = false, features = ["json", "default-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"] }
tokio-tungstenite = { version = "0.29", features = ["connect", "rustls-tls-webpki-roots"] }
futures-util = "0.3"

# real atproto CIDv1 (DAG-CBOR/SHA-256) for client/PDS CID parity
cid = "0.11"
serde_ipld_dagcbor = "0.6"
multihash-codetable = { version = "0.2", features = ["sha2"] }
